[package]
name = "bup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
async-trait = "0.1.83"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
blake3 = "1.5.4"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
