[package]
name = "bup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
async-trait = "0.1.83"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
blake3 = "1.5.4"
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
memmap2 = "0.9.4"
object_store = { version = "0.11.1", features = ["aws"] }
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.41.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.13.0"
