[package]
name = "bup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
base64 = "0.22.1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
blake3 = "1.5.4"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
object_store = { version = "0.11.1", features = ["aws"] }
rayon = "1.10.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.13.0"
